Project

General

Profile

Actions

Bug #7040

closed

gem install で特定の gem がインストールできない

Bug #7040: gem install で特定の gem がインストールできない

Added by hsbt (Hiroshi SHIBATA) about 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2012-09-20 trunk 36993) [x86_64-darwin12.2.0]
Backport:
[ruby-dev:<unknown>]

Description

trunk で特定の gem(例えば libv8等)をインストールしようとすると必ず失敗してしまいます。

% gem i libv8
ERROR: While executing gem ... (Zlib::BufError)
buffer error

Twitter 上で nagachika さんから Zlib の GVL 対応?が原因ではないかとコメントを頂きましたが、上記のエラー表示以降は調査しきれていません。


Files

zlib_inflate_buf_error.patch (634 Bytes) zlib_inflate_buf_error.patch nagachika (Tomoyuki Chikanaga), 10/08/2012 12:29 AM
Actions

Also available in: PDF Atom