* ext/zlib/zlib.c (zstream_run_func): don't call inflate() when   z->stream.avail_in == 0. it return Z_BUF_ERROR.   but deflate() could be called with z->stream->avail_in == 0 because   it has hidden buffer in z->stream->state (opaque structure).   fix for gem install error. [ruby-dev:46149] [Bug #7040]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37119 b2dd03c8-39d4-4d8f-98ff-823fe69b080e